# blec

./: .gitignore  .pylintrc  LICENSE  README.md  setup.cfg  setup.py
.github/workflows/: publish.yml
blec/: .pylintrc  __init__.py  __main__.py  __version__.py  _main.py  main.py
blec/tests/: test_blec.py
