[pycodestyle]
max-line-length = 100

[flake8]
max-line-length = 100

[metadata]
name = blec
author = igrmk
author_email = igrmkx@gmail.com
description = Alpha blending calculator
long_description_content_type = text/markdown
url = https://github.com/igrmk/blec
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find:
python_requires = >= 3.0
install_requires =
    importlib_metadata; python_version < "3.8"

[options.entry_points]
console_scripts = blec = blec._main:_main
